--- a/style.css
+++ b/style.css
@@ -1,23 +1,67 @@
 *{
     margin: 0px;
     padding: 0px;
-    
-}
-.container{
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    flex-direction: row-reverse;
-}
-.box{
-    padding: 20px;
-    background-color: hotpink;
-    width: 120px;
 
 }
-.box2{
-    background-color: rgb(50, 133, 206);
+.menu-bar{
+    background-color: rgb(73, 70, 70);
+    padding: 20px;
+    color: white;
+    list-style: none;
+    display: flex;
+    align-items: center;
+    justify-content: space-around;
+
 }
-.box3{
-    background-color: rgb(164, 216, 20);
+.logo{
+    width: 120px;
+}
+.menu-item{
+    display: flex;
+}
+.item{
+    margin-right: 10px;
+    padding-right: 7px;
+    font-size: 18px;
+    cursor: pointer;
+}
+.item:hover{
+    color: blue;
+}
+.banner-container{
+    display: flex;
+    justify-content: space-around;
+    height: 100vh;
+    /* border: 2px solid red; */
+    color: wheat;
+    align-items: center;
+    background-image: url(./images/background.png),linear-gradient(45deg,rgb(8,8,8),rgb(8,8,8));
+    background-position: center;
+    background-size: cover;
+    background-repeat: no-repeat;
+    
+}
+.photo{
+    width: 300px;
+}
+.title{
+    font-size: 55px;
+    font-weight: bold;
+}
+.title2{
+    font-size: 18px;
+    margin-top: 15px;
+    margin-bottom: 15px;
+}
+.button{
+    color: white;
+    padding: 10px 20px;
+    background-color:red;
+    border: none;
+    border-radius: 5px;
+    cursor: pointer;
+}
+.button:hover{
+    color: blue;
+    background-color: aqua;
 }
