--- a/style.css
+++ b/style.css
@@ -88,3 +88,57 @@ header{
 .about-text p{
     padding: 5px 0px;
 }
+.service{
+    display: flex;
+    justify-content: space-around;
+    align-items: center;
+}
+.service-title{
+    text-align: center;
+    color: wheat;
+    font-size: 40px;
+    padding: 20px 0px;
+    font-weight: 500px;
+}
+.card{
+    color: wheat;
+    text-align: center;
+    padding: 15px;
+    width: 230px;
+    height: 280px;
+    box-shadow: 4px 4px 20px wheat;
+    background-color:black;
+    background-color: rgb(14, 13, 13);
+}
+
+.icon{
+    width: 70px;
+    padding-top: 10px;
+}
+
+.service-container{
+    background-color: black;
+    margin-top: 20px;
+    height: 450px;
+}
+.card h2{
+    padding: 15px 0px;
+
+
+}
+.card p{
+    font-size: 16px;
+    padding-bottom: 15px;
+
+}
+.button1{
+    color: wheat;
+    padding: 10px 20px;
+    background-color:#0E0D0D;
+    border: none;
+    border-radius: 5px;
+    cursor: pointer;
+}
+.button1:hover{
+    background-color: #161410;
+}
